alacritty tmux alias .zshrc

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,10 +5,6 @@
 # Workaround to allow acessing OSX pasteboard
 #set-option -g default-command "reattach-to-user-namespace -l zsh"
 
-# Appropriate terminal colors
-set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
-
 # Start tabs at index 1
 set -g base-index 1
 
@@ -23,6 +19,22 @@ set-window-option -g automatic-rename on
 set-option -g set-titles on
 
 ###################################################################
+# Neovim
+###################################################################
+
+# No delay for escape key press
+#set -sg escape-time 0
+set-option -sg escape-time 10
+
+set-option -g focus-events on
+
+# Appropriate terminal colors
+#set-option -g default-terminal "screen-256color"
+#set-option -sa terminal-overrides ',xterm-256color:RGB'
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
+
+###################################################################
 # Key-bindings
 ###################################################################
 
@@ -31,6 +43,10 @@ unbind C-b
 
 # set prefix key to ctrl-a
 set -g prefix C-a
+
+# Remap capslock to CTRL for easy access
+# System Prferences > Keyboard > Modifer Keys > set capslock to CTRL
+bind C-a send-prefix
 
 # set -g default-terminal screen-256color
 set -g status-keys vi
@@ -67,8 +83,6 @@ bind M-k resize-pane -U
 bind M-h resize-pane -L
 bind M-l resize-pane -R
 
-# No delay for escape key press
-set -sg escape-time 0
 
 # Reload the file with Prefix r.
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
@@ -110,4 +124,5 @@ set -g @plugin 'robhurring/tmux-spotify' # spotify songs
 run '~/.tmux/plugins/tpm/tpm'
 # <prefix> I - Install
 # <prefix> U - Uninstall
+
 
