--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "nvim/packer.nvim"]
 	path = nvim/packer.nvim
 	url = https://github.com/wbthomason/packer.nvim.git
+[submodule "alacritty/catppuccin"]
+	path = alacritty/catppuccin
+	url = https://github.com/catppuccin/alacritty.git
